python/examples/other/compare.py
x =12
y = 3
print(x > y)     # True

x = '12'; y = 3
print(x > y)     # True

x, y = "12", "3"
print(x > y)      # False

x, y = 12, '3'
print(x > y)      # False

